# hawk-core

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
core/: audit_log.py  autonomous_operator.py  business_intelligence.py  citation.py  consciousness_lab.py  continuous_learning.py  cost_guard.py  cu_approval.py  cu_task_policy.py  dl_sign.py  experiment_runner.py  fact_extractor.py  file_analyzer.py  file_studio.py  forget_intent.py  gpu_router.py  hawk_email.py  hawk_logger.py  hawk_places.py  maintenance_authz.py  memory_pipeline.py  operational_learning.py  ops_monitor.py  pg_memory.py  pii_redactor.py  resilience.py  router.py  santral_bridge.py  secret_redactor.py  self_dev_sandbox.py  self_improvement_system.py  soak_monitor.py  swarm.py  user_consent.py  voice_session.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  USAGE.md
eval/: README.md  RESULTS.md  run_bench.py  score.py  testset.jsonl
examples/: README.md  safety_demo.py
ml_ops/: build_additions_v04.py  build_additions_v05.py  build_additions_v08.py  build_additions_v10.py  build_additions_v11.py  build_dataset_v03.py  build_dataset_v06.py  build_dataset_v07.py  build_dataset_v08.py  candidate.py  evaluation_gates.py  expand.py  hawk_base_versions.py  model_registry.py  pipeline.py  prepare_base_v01.py  register_code_mini_v01.py  seed_candidates.py  self_improve_flow.py  shadow_canary.py  training_job.py
orchestration/: agent_spec.py
src/: README.md
src/core/: brain.py  (+31 more)
(+60 files in other folders)
